bug: Remove setting --color-white explicitly on hoverLink class
This would mean that in light mode the link would remain white rather
than swapping to black and hence would become invisible

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -53,7 +53,6 @@
 }
 
 .hoverLink {
-    color: var(--color-white, white);
     transition: color 0.3s ease;
 }
 
